--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,12 +1,10 @@
 # main links
 main:
-  - title: "About"
-    url: /about/
   - title: "Category"
     url: /categories/
   - title: "Nomad"
     url: /nomad/
-  - title: "Pets"
+  - title: "Coworker"
     url: /pets/
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
