--- a/_config.yml
+++ b/_config.yml
@@ -294,7 +294,7 @@ defaults:
       path: ""
       type: posts
     values:
-      layout: single
+      layout: mysingle
       author_profile: true
       read_time: true
       comments: # true
